<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/favorite_24"
            android:title="@string/menu_favorite" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/exit_24"
            android:title="Log Out" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/exit_24"
            android:title="Exit" />
    </group>
</menu>