<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgContent1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/stxtRegister2"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#BBDEFB"
        android:hint="@string/hintUsername"
        android:inputType="textPersonName"
        android:padding="7dp"
        android:textColor="@color/bgBlu1"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/edtFullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#BBDEFB"
        android:hint="@string/hintFullname"
        android:inputType="textPersonName"
        android:padding="7dp"
        android:textColor="@color/bgBlu1"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#BBDEFB"
        android:hint="@string/hintEmail"
        android:inputType="textWebEmailAddress|textPersonName"
        android:padding="7dp"
        android:textColor="@color/bgBlu1"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#BBDEFB"
        android:hint="@string/hintPhone"
        android:inputType="textPersonName|textPhonetic|phone"
        android:padding="7dp"
        android:textColor="@color/bgBlu1"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#BBDEFB"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:padding="7dp"
        android:textColor="@color/bgBlu1"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#283593"
        android:text="@string/sbtnRegister" />

</LinearLayout>