<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgContent1"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/stxtLogin"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#BBDEFB"
        android:hint="Username"
        android:inputType="textPersonName"
        android:padding="7dp"
        android:textColor="@color/bgBlu1"
        android:textSize="20sp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#BBDEFB"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="7dp"
        android:textColor="@color/bgBlu1"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#283593"
        android:text="@string/sbtnLogin2" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <TextView
        android:id="@+id/ctxtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/stxtRegister"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>